--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-future==0.14.1
-nose==1.3.3
-numpy==1.9.2
-pandas==0.16.2
-pytz==2014.10
-scipy==0.16.0
-setuptools==18.5
-statsmodels==0.6.1
-patsy==0.4.1
+future>=0.14.1
+nose>=1.3.3
+numpy>=1.8.0
+pandas>=0.15.0
+pytz>=2014.10
+scipy>=0.14.0
+setuptools>=18.5
+statsmodels>=0.6.1
+patsy>=0.4.1
